--- a/TaskHibernate/pom.xml
+++ b/TaskHibernate/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>jm.task.core.jdbc</groupId>
-    <artifactId>TaskJDBC</artifactId>
+    <artifactId>TaskHibernate</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.3.10.Final</version>
+            <version>5.5.7.Final</version>
         </dependency>
 
     </dependencies>
