--- a/TaskHibernate/src/main/resources/hibernate.properties
+++ b/TaskHibernate/src/main/resources/hibernate.properties
@@ -3,5 +3,4 @@ hibernate.connection.url=jdbc:mysql://localhost:3306/taskjdbc
 hibernate.connection.username=root
 hibernate.connection.password=1111
 hibernate.show_sql=true
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.current_session_context_class=thread
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
